# cmsc858_hw2

./: CMakeLists.txt  README.md
include/: bbf.h  bf.h  hashUtil.h  opts.h
include/compact_vector/: compact_vector.hpp
reports/: bbf_big.report  bf_big.report
src/: CMakeLists.txt  bbf.cpp  bf.cpp  runBBfCommands.cpp  runBfCommands.cpp
